--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
           </div>
     </div>
-    <section class="container-fluid d-none d-lg-block pt-4 pb-4">
+    <section class="container-fluid d-none d-lg-block pt-4">
       <div id="somos">
     <p>
       <h1 class="h1" style="padding-top: 4rem;">¿Quiénes Somos?</h1>
@@ -91,7 +91,7 @@
     </div>
     </section>
     
-    <section class="container-fluid d-none d-lg-block pt-4" style="background-color: black;padding-bottom: 4rem; padding-left: 4rem; padding-right: 3rem; align-items: center;">
+    <section class="container-fluid d-none d-lg-block pt-2" style="background-color: black;padding-bottom: 4rem; padding-left: 4rem; padding-right: 3rem; align-items: center;">
      
       <div class="row" style="position: center; background-color: black; ">
           <div class="col pt-4">
@@ -193,11 +193,11 @@
 
     <footer class="pie " style="align-content: center;">
 
-      <div class="row bg-info  justify-content-center" style="padding-inline-start: 8rem;">
+      <div class="row bg-info  justify-content-center " style="padding-left: 8rem;">
       <div class="col-3">
-              <h2 class="display-5 text-center text-light font-weight-bold pt-4">Viajes Chile</h2>
+              <h2 class="display-5 text-center text-light font-weight-bold pt-4" style="padding-left: 4rem;">Viajes Chile</h2>
           </div>
-          <div class="col-8  text-light display-4 ml-auto pr-5" style="padding-inline-start: 8rem;">
+          <div class="col-8  text-light display-4 ml-auto pr-5" style="padding-left: 8rem; padding-inline-start: 4rem;">
               <i class="fab fa-github-square icono"></i>
               <i class="fab fa-linkedin icono"></i>
               <i class="fab fa-twitter-square icono"></i>
