--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
     <footer class="pie " style="align-content: center;">
 
       
-      <div class="row bg-info  justify-content-center " style="padding-left: 8rem;">
+      <div class="row bg-info  justify-content-center " style="padding-left: 8rem; padding-inline-start: 10%;">
         <div class="col-3">
-            <h2 class="display-5 text-left text-light font-weight-bold pt-4" style="padding-left: 4rem;">Viajes Chile</h2>
+            <h2 class="display-5 text-left text-light font-weight-bold pt-4 " style="padding-left: 4rem;">Viajes Chile</h2>
         </div>
-        <div class="col-8  text-light display-4 ml-auto pr-5" style="padding-inline-start: 14rem;">
+        <div class="col-8  text-light display-4 ml-auto pr-5" style="padding-inline-start: 30%;">
             <i class="fab fa-github-square icono"></i>
             <i class="fab fa-linkedin icono"></i>
             <i class="fab fa-twitter-square icono"></i>
