--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/Apoyoprueba/assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/Apoyoprueba/assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/Apoyoprueba/assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
