--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"></script>
-      <script src="/Apoyoprueba/assets/js/index.js"></script>
+      <script src="../Apoyoprueba/assets/js/index.js"></script>
 
       <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
@@ -30,7 +30,7 @@
 
 <body class="bg-header ">
     <nav class="nav navbar navbar-expand-lg navbar-dark bg-transparent fixed-top" style="background-color: transparent !important">
-        <a class="navbar-brand" href="#"><img src="/Apoyoprueba/assets/img/viajes.svg"  alt="" height="45" class="d-inline-block align-top"></a>
+        <a class="navbar-brand" href="#"><img src="../Apoyoprueba/assets/img/viajes.svg"  alt="" height="45" class="d-inline-block align-top"></a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
