--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body class="bg-header ">
     <nav class="nav navbar navbar-expand-lg navbar-dark bg-transparent fixed-top" style="background-color: transparent !important">
-        <a class="navbar-brand" href="#"><img src="/Apoyoprueba/assets/img/viajes.svg"  alt="" height="45" class="d-inline-block align-top"></a>
+        <a class="navbar-brand" href="#"><img src="../Apoyoprueba/assets/img/viajes.svg"  alt="" height="45" class="d-inline-block align-top"></a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,13 +61,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/Apoyoprueba/assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/Apoyoprueba/assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/Apoyoprueba/assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                <img src="../Apoyoprueba/assets/img/carousel3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
